objects/redwing__Prerequisite_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>redwing__Achievement__c</referenceTo>
        <relationshipLabel>Prerequisite Items</relationshipLabel>
        <relationshipName>Prerequisite_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Prerequisite Items</relationshipLabel>
        <relationshipName>Prerequisite_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Prerequisite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prerequisite</label>
        <referenceTo>redwing__Prerequisite__c</referenceTo>
        <relationshipLabel>Prerequisite Items</relationshipLabel>
        <relationshipName>Prerequisite_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Required_Status__c</fullName>
        <label>Required Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Acquired</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Taught_Classes__c</fullName>
        <label>Taught Classes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Prerequisite Items</relationshipLabel>
        <relationshipName>Prerequisite_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Prerequisite Items</relationshipLabel>
        <relationshipName>Prerequisite_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Prerequisite Item</label>
    <nameField>
        <label>Prerequisite Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prerequisite Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>